--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "lucide-react": "^0.488.0",
+    "pdfjs-dist": "^5.1.91",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
