--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "react-top-loading-bar": "^3.0.2",
     "react-typed": "^2.0.12"
   },
   "scripts": {
