--- a/next-examee/package.json
+++ b/next-examee/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
+    "@vercel/blob": "^2.3.0",
     "axios": "^1.8.4",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.3",
